refactor: use one uploading picture controller for both chefs and customers
