# src/swagger.json
@@ -330,61 +330,25 @@
         }
       }
     },
-    "/auth/chef/signup/{id}/avatar": {
+    "/auth/uploadAvatar/{username}": {
       "post": {
         "tags": ["user"],
-        "summary": "Upload chef avatar",
+        "summary": "Upload user avatar",
         "description": "",
         "consumes": ["application/json"],
         "produces": ["application/json", "application/xml"],
         "parameters": [
           {
-            "name": "id",
+            "name": "username",
             "in": "path",
-            "description": "The chef id that needs to be fetched.",
+            "description": "the user username that needs to be fetched",
             "required": true,
             "type": "string"
           },
           {
             "name": "avatar",
             "in": "formData",
-            "description": "The chef avatar that needs to be uploaded.",
-            "required": true,
-            "type": "file"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation"
-          },
-          "401": {
-            "description": "not authorized"
-          },
-          "500": {
-            "description": "bad requests"
-          }
-        }
-      }
-    },
-    "/auth/customer/signup/{id}/avatar": {
-      "post": {
-        "tags": ["user"],
-        "summary": "Upload customer avatar",
-        "description": "",
-        "consumes": ["application/json"],
-        "produces": ["application/json", "application/xml"],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "The customer id that needs to be fetched.",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "avatar",
-            "in": "formData",
-            "description": "The customer avatar that needs to be uploaded.",
+            "description": "the user avatar that needs to be uploaded",
             "required": true,
             "type": "file"
           }
